--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-gunicorn==20.0.4
-Django==3.0.6
-decouple==0.0.7
-whitenoise==5.0.1
-django-heroku
+Django==1.9.8
+dj-database-url==0.3.0
+dj-static==0.0.6
+gunicorn==19.6.0
+Unipath==1.0
+python-decouple==3
+Pillow==3.3.0
+Markdown==2.6.6
+bleach==1.4.3
+psycopg2==2.6.1
+whitenoise==3.2
